Fix alignment of flash message on sign in page

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -86,9 +86,14 @@ h1, h2, h3, h4 {
 /* ====================
  FLASH MESSAGE STYLES
 ======================= */
-#flask-flash {
+.flask-flash {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 1.5em;
+}
+
+.flask-flash--no-nav {
+    margin-bottom: 0;
 }
 
 .flash-message {
@@ -100,7 +105,6 @@ h1, h2, h3, h4 {
     background: hsla(160, 36%, 88%, 1);
     position: relative;
     padding: .75rem 1.25rem;
-    margin-bottom: 1rem;
 }
 
 .error, .message {
@@ -108,7 +112,6 @@ h1, h2, h3, h4 {
     background: hsla(3, 56%, 49%, 0.3);
     position: relative;
     padding: .75rem 1.25rem;
-    margin-bottom: 1rem;
 }
 
 /* ====================
